[gd_scene load_steps=52 format=2]

[ext_resource path="res://Actors/Ghost sprites/NightBorne.png" type="Texture" id=2]
[ext_resource path="res://Actors/Ghost.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 13, 14.875 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 80, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 160, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 240, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 320, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 400, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 720, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 800, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 880, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 80, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 160, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 240, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 320, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 400, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 480, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 560, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 640, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 720, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 800, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 880, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 960, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 1040, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 1120, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 1200, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 1280, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 1360, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 1440, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 1520, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 1600, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 1680, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 1760, 320, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 80, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 160, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 240, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 320, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 400, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 480, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 560, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 640, 160, 80, 80 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "Ata",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Prep",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 129, 10 )

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 38, 14 )

[sub_resource type="RectangleShape2D" id=59]

[sub_resource type="RectangleShape2D" id=63]

[node name="Ghost K" type="KinematicBody2D" groups=["Ghost"]]
collision_layer = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = SubResource( 8 )
animation = "Idle"
playing = true
flip_h = true

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( 1, 0 )
shape = SubResource( 55 )

[node name="Los atk" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Los atk"]
shape = SubResource( 58 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 27, 0 )

[node name="ColisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -4, 3 )
scale = Vector2( 1.5, 1 )
shape = SubResource( 59 )

[node name="Hurbox2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurbox2"]
position = Vector2( -23, 2 )
scale = Vector2( 1.48, 1 )
shape = SubResource( 63 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_entered" from="Los atk" to="." method="_on_Los_atk_body_entered"]
[connection signal="body_exited" from="Los atk" to="." method="_on_Los_atk_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_Hurtbox_body_exited"]
[connection signal="body_entered" from="Hurbox2" to="." method="_on_Hurbox2_body_entered"]
[connection signal="body_exited" from="Hurbox2" to="." method="_on_Hurbox2_body_exited"]
